[intro] Minor formatting

--- a/intro/presentation.tex
+++ b/intro/presentation.tex
@@ -15,7 +15,7 @@
 \usepackage{booktabs}
 
 
-\usetheme[basicfont]{hri}
+\usetheme{hri}
 
 \usepackage{dtklogos} % must be loaded after theme
 \usepackage{tikz}
@@ -116,33 +116,35 @@ Interaction}
 \footnotesize
     \begin{itemize}
 
-\item Sandra Devin, Grégoire Milliez, Michelangelo Fiore, Aurélie Clodic and
-    Rachid Alami -- {\Medium Some essential skills and their combination in an
-    architecture for a cognitive and interactive robot}
+\item Paul Baxter -- {\Medium Memory-Centred Cognitive Architectures for Robots
+    Interacting Socially with Humans}
 
-\item J. Ignacio Serrano and M. Dolores Del Castillo -- {\Medium The Three
-    Must-Get-Theres.  Technical, epistemological and ethical concerns about
-    Cognitive Architectures for social Interaction}
+
+\item Sandra Devin, Grégoire Milliez, Michelangelo Fiore, Aurélie Clodic and
+    Rachid Alami -- {\Medium Some Essential Skills and their Combination in an
+    Architecture for a Cognitive and Interactive Robot}
+
+\item Nick Depalma and Cynthia Breazeal -- {\Medium NIMBUS: A Hybrid
+        Cloud-Crowd Realtime Architecture for Visual Learning in Interactive
+    Domains}
+
 
 \item Gabriel Ferrer -- {\Medium Associative Memories and Human-Robot Social
     Interaction}
+
+
+\item Alexis Jacq, Wafa Johal, Pierre Dillenbourg and Ana Paiva -- {\Medium
+    Cognitive Architecture for Mutual Modelling}
+
+\item J. Ignacio Serrano and M. Dolores Del Castillo -- {\Medium The Three
+    Must-Get-Theres.  Technical, Epistemological and Ethical Concerns about
+    Cognitive Architectures for Social Interaction}
 
 \item Vasanth Sarathy, Jason Wilson, Thomas Arnold and Matthias Scheutz --
     {\Medium Enabling Basic Normative HRI in a Cognitive Robotic Architectures}
 
 \item Liz Sonenberg, Tim Miller, Adrian Pearce, Paolo Felli, Christian Muise and
-    Frank Dignum -- {\Medium Social Planning for social HRI}
-
-    \item Nick Depalma and Cynthia Breazeal -- {\Medium NIMBUS: A Hybrid
-        Cloud-Crowd Realtime Architecture for Visual Learning in Interactive
-    Domains}
-
-\item Alexis Jacq, Wafa Johal, Pierre Dillenbourg and Ana Paiva -- {\Medium
-    Cognitive Architecture for Mutual Modelling}
-
-\item Paul Baxter -- {\Medium Memory-Centred Cognitive Architectures for Robots
-    Interacting Socially with Humans}
-
+    Frank Dignum -- {\Medium Social Planning for Social HRI}
     \end{itemize}
 \end{frame}
 
