Last set of changes before WS

--- a/q1-why-cog-arch/presentation.tex
+++ b/q1-why-cog-arch/presentation.tex
@@ -18,7 +18,7 @@
 %--------------------------------------------------------------------------
 % Load theme
 %--------------------------------------------------------------------------
-\usetheme[basicfont]{hri}
+\usetheme{hri}
 
 \usepackage{dtklogos} % must be loaded after theme
 \usepackage{tikz}
@@ -110,7 +110,9 @@ benefit your research as a theoretical framework, a tool and/or a methodology?}
         \item Apply model to robotics system
     \end{itemize}
     
-    Multiple examples in the literature of (aspects of) this process.
+    Multiple examples in the literature of (aspects of) this process, at least starting from an existing cognitive architecture
+    
+    \refToContrib{Most contributions fit here in some way}
 
 \end{frame}
 
@@ -194,7 +196,7 @@ benefit your research as a theoretical framework, a tool and/or a methodology?}
 }
 
 \begin{flushright}
-\scriptsize \refToContrib{From Sandra's contribution}
+\scriptsize \refToContrib{From Sandra's contribution (Paper 1)}
 \end{flushright}
 
 \end{frame}
@@ -210,6 +212,7 @@ benefit your research as a theoretical framework, a tool and/or a methodology?}
     \end{itemize}
     
 	A few examples in the literature of (aspects of) this process.
+	\refToContrib{Liz (social planning), Nick (percept learning), ...}
 
 \end{frame}
 
@@ -225,13 +228,15 @@ benefit your research as a theoretical framework, a tool and/or a methodology?}
     \begin{itemize}
         \item Human-derived evidence (from perhaps multiple domains)
         \item Define set of principles and constraints
-        \item Implement architecture on robot; run experiment(s)
+        \item Implement architecture on robot; generate predictions; run experiment(s)
         \item Feed back results into principles and constraints; repeat
     \end{itemize}
     
-    This process not typically explicit in the literature, but rather implicit in the development of cognitive (model) architectures in psychology/CogSci for example.
+    This process not typically explicit in the literature, but rather implicit in the development of cognitive (model) architectures in psychology/CogSci for example. Also includes those approaches that emphasise fundamental mechanisms rather than human-level functionality.    
+    \refToContrib{Gabriel (SOMs), Paul (associative memory), ...}
     
 \end{frame}
+
 
 \begin{frame}{3. CogArch as Methodology}    
 
@@ -250,50 +255,53 @@ benefit your research as a theoretical framework, a tool and/or a methodology?}
     
 
     \begin{itemize}
-        \item ...
-        \item ...
-        \item ...
+        \item To what extent are `shallow' models of robot cognitive behaviour (e.g. reactivity) sufficient to lead to complex social behaviour?
+
+        \item Is the application of a human-inspired complete model of cognition simply over-the-top for the desired functionality?
+        \item The use of Cognitive Architectures to integrate knowledge (empirical data) from different disciplines into sHRI...
+        \item How robots tranform our existing understanding of CogArch for
+            social interaction?
     \end{itemize}
+    
+	\vspace{0.5cm}	
 
     35 minutes of open discussion + 2 presentations
 
 \end{frame}
 
 
-\begin{frame}{Bibliography}
-\begin{thebibliography}{10}
-
-    \beamertemplatearticlebibitems
-    \bibitem{lemaignan2015mutual}
-    S. Lemaignan, P. Dillenbourg
-    \newblock \doublequoted{Mutual Modelling: Inspiration for the Next Steps}
-    \newblock 2015
-
-    \beamertemplatearticlebibitems
-    \bibitem{tenorth2010understanding}
-    M. Tenorth, D. Nyga, M. Beetz
-    \newblock \doublequoted{Understanding and Executing Instructions for Everyday Manipulation Tasks
-    from the World Wide Web}
-    \newblock 2010
-
-    \beamertemplatearticlebibitems
-    \bibitem{mavridis2015review}
-    N. Mavridis
-    \newblock \doublequoted{A review of verbal and non-verbal human–robot interactive communication}
-    \newblock 2015
-
-
-
-    \beamertemplatearticlebibitems
-    \bibitem{kruijff2010situated}
-    G.-J. M. Kruijff \emph{et al.}
-    \newblock \doublequoted{Situated dialogue processing for human-robot interaction}
-    \newblock 2010
-
-
-
-  \end{thebibliography}
-\end{frame}
+%\begin{frame}{Bibliography}
+%
+%	\begin{thebibliography}{10}
+%
+%    \beamertemplatearticlebibitems
+%    \bibitem{lemaignan2015mutual}
+%    S. Lemaignan, P. Dillenbourg
+%    \newblock \doublequoted{Mutual Modelling: Inspiration for the Next Steps}
+%    \newblock 2015
+%
+%    \beamertemplatearticlebibitems
+%    \bibitem{tenorth2010understanding}
+%    M. Tenorth, D. Nyga, M. Beetz
+%    \newblock \doublequoted{Understanding and Executing Instructions for Everyday Manipulation Tasks
+%    from the World Wide Web}
+%    \newblock 2010
+%
+%    \beamertemplatearticlebibitems
+%    \bibitem{mavridis2015review}
+%    N. Mavridis
+%    \newblock \doublequoted{A review of verbal and non-verbal human–robot interactive communication}
+%    \newblock 2015
+%
+%    \beamertemplatearticlebibitems
+%    \bibitem{kruijff2010situated}
+%    G.-J. M. Kruijff \emph{et al.}
+%    \newblock \doublequoted{Situated dialogue processing for human-robot interaction}
+%    \newblock 2010
+%
+%  	\end{thebibliography}
+%  
+%\end{frame}
 
 \end{document}
 
