--- a/q4-fundamental-computational-structures/presentation.tex
+++ b/q4-fundamental-computational-structures/presentation.tex
@@ -295,13 +295,14 @@ symbolic, sub-symbolic, hybrid, ...)?}
 
 \begin{frame}{Highlights}
     \begin{itemize}
-        \item often {\Medium principled approaches}
+        \item often {\Medium general principled approaches}
         \item {\Medium learning} is intrinsic and fundamental
-        \item {\Medium interesting features} come for free (eg concept priming)
+        \item {\Medium emergent features} (eg concept priming)
     \end{itemize}
     \only<2>{
     \begin{itemize}
-        \item principled approach brings {\Medium predictive power}
+        %\item principled approach brings {\Medium predictive power}
+        \item more directly comparable to human cognitive appartus
         \item applications to high-level socio-cognitive tasks only emerging
         \item {\Medium still hard to deal with time!}
     \end{itemize}
@@ -534,12 +535,11 @@ symbolic, sub-symbolic, hybrid, ...)?}
 
     \begin{itemize}
 
-    \item ``Unique Selling Propositions'' of each approach?
     \item Does sHRI shed a particular light on the question?
     \item Does {\Medium hybrid architecture} means ``a bit of
         both with bridges in the middle'', or may it be an independent principled
         model?
-    \item should we attempt to bridge?
+    \item Should we attempt to bridge? $\Rightarrow$ CogArch as a methodology!
 
     \end{itemize}
 
