--- a/q6-scenarios/presentation.tex
+++ b/q6-scenarios/presentation.tex
@@ -46,7 +46,7 @@
 \title{Soc. Interaction Scenarios}
 \subtitle{Q6 -- Can you devise a social interaction scenario that current
 cognitive architectures would likely fail, and why?}
-\date{}
+\date{7th March 2016\\ {\tiny \url{https://sites.google.com/site/cogarch4socialhri2016/}}}
 \author{}
 \institute{\includegraphics[height=15mm]{plymouth-logo}}
 %\\Centre for Robotics \& Neural
@@ -164,7 +164,7 @@ cognitive architectures would likely fail, and why?}
 
         {\Medium Impact}\\
         $\square$ is socially relevant\\
-        $\square$ the intend of the task can be explained in one sentence\\
+        $\square$ the intent of the task can be explained in one sentence\\
         $\square$ it is beyond the state-of-art\\
 
         {\Medium Required socio-cognitive functions}
@@ -243,9 +243,7 @@ cognitive architectures would likely fail, and why?}
         \item What are these scenarios!?
     \end{itemize}
 
-    35 minutes of open discussion, plus:
-    \refToContrib{Vasanth's presentation (15 min)}
-    \refToContrib{Alexis' presentation (15 min)}
+    35 minutes of open discussion, plus two presentations
 
 \end{frame}
 
